--- a/client/package.json
+++ b/client/package.json
@@ -14,11 +14,13 @@
 		"react": "^16.13.1",
 		"react-bootstrap-spinner": "^1.0.0",
 		"react-dom": "^16.13.1",
-		"react-redux": "^7.2.0",
+		"react-redux": "^7.2.1",
+		"react-responsive-carousel": "^3.2.10",
 		"react-router-dom": "^5.1.2",
 		"react-scripts": "3.4.1",
 		"redux": "^4.0.5",
 		"redux-devtools-extension": "^2.13.8",
+		"redux-form": "^8.3.6",
 		"redux-persist": "^6.0.0",
 		"redux-thunk": "^2.3.0",
 		"uuid": "^8.0.0"
