--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"fuse.js": "^6.4.1",
 		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^5.9.10",
+		"react-tsparticles": "^1.17.12",
 		"socket.io": "^2.3.0"
 	},
 	"devDependencies": {
